--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,8 +15,8 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ junhuuu }}
+          password: ${{ dckr_pat_oRLP5mOMKKS_bDlWQXlK1Ka5Aos }}
 
       - name: Build and push Docker image
         run: |
