--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,11 +15,12 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ junhuuu }}
-          password: ${{ dckr_pat_oRLP5mOMKKS_bDlWQXlK1Ka5Aos }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push Docker image
         run: |
-          docker build -t junhuuu/options:latest .
-          docker push junhuuu/options:latest
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/options:latest .
+          docker push ${{ secrets.DOCKER_USERNAME }}/options:latest
+
 
