--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,15 +3,21 @@ name: CI to Docker Hub
 on:
   push:
     branches:
-      - main  
+      - main
 
 jobs:
   build-and-push:
-    runs-on: ubuntu-latest  # Specifies the runner
+    runs-on: ubuntu-latest
 
     steps:
       - name: Check out the repository
-        uses: actions/checkout@v3  # Checks out your repository under $GITHUB_WORKSPACE
+        uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Cache Docker layers
+        uses: satackey/action-docker-layer-caching@v0.0.11
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -20,6 +26,18 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push Docker image
+        if: contains(github.event.head_commit.modified, 'Dockerfile') || contains(github.event.head_commit.modified, 'src/')
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/options:latest
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+          load: true  # Required if not pushing to a registry
+
+      - name: Move Docker cache
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/options:latest .
-          docker push ${{ secrets.DOCKER_USERNAME }}/options:latest
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
