--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,9 +20,9 @@ jobs:
         uses: actions/cache@v2
         with:
           path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          key: ${{ runner.os }}-buildx-${{ github.ref }}-${{ hashFiles('**/Dockerfile') }}
           restore-keys: |
-            ${{ runner.os }}-buildx-
+            ${{ runner.os }}-buildx-${{ github.ref }}-
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -31,7 +31,6 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push Docker image
-        if: contains(github.event.head_commit.modified, 'Dockerfile') || contains(github.event.head_commit.modified, 'src/')
         uses: docker/build-push-action@v2
         with:
           context: .
@@ -40,4 +39,3 @@ jobs:
           tags: ${{ secrets.DOCKER_USERNAME }}/options:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache,mode=max
-          load: true  # Required if not pushing to a registry
